force-app/main/default/objects/RelationshipBuildingPlan__c/RelationshipBuildingPlan__c.object-meta.xml
<CustomObject>
    <label>関係構築計画</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>関係構築計画名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>