force-app/main/default/objects/RelationshipBuildingPlan__c/fields/ST_contact__c.field-meta.xml
<CustomField>
    <fullName>ST_contact__c</fullName>
    <label>顧客（誰と？）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>