force-app/main/default/objects/RelationshipBuildingPlan__c/fields/ST_nerai__c.field-meta.xml
<CustomField>
    <fullName>ST_nerai__c</fullName>
    <label>狙い</label>
    <length>100</length>
    <type>Text</type>
</CustomField>