force-app/main/default/objects/RelationshipBuildingPlan__c/fields/ST_taisyoubi__c.field-meta.xml
<CustomField>
    <fullName>ST_taisyoubi__c</fullName>
    <label>対象日</label>
    <type>Date</type>
</CustomField>