force-app/main/default/objects/RelationshipBuildingPlan__c/fields/ST_tousyanodarega__c.field-meta.xml
<CustomField>
    <fullName>ST_tousyanodarega__c</fullName>
    <label>当社の誰が</label>
    <length>100</length>
    <type>Text</type>
</CustomField>